Library url fixed, User's email hidden

--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -14,7 +14,7 @@
 							<ul class='dropdown-menu'>
 								<li><%= link_to "View Profile", current_user %></li>
 								<li><%= link_to "Edit Profile", edit_user_path(current_user) %></li>
-								<li><%= link_to "My Collection", 'library/index' %></li>
+								<li><%= link_to "My Collection", '/library/index' %></li>
 								<li class='divider'></li>
 								<li><%= link_to 'Logout', logout_path, method: 'delete' %></li>
 							</ul>
