--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,6 +1,27 @@
-<h3>Update Profile</h3>
+<div class='row'>
+	<div class='span6 offset3'>
+		<h3>Update Profile</h3>
 
-<%= render 'form' %>
+		<%= form_for(@user) do |f| %>
+
+			<%= f.label :name %>
+			<%= f.text_field :name %>
+
+			<%= f.label :email %>
+			<%= f.text_field :email %>
+
+			<%= f.label :password %>
+			<%= f.password_field :password %>
+
+			<%= f.label :password_confirmation, "Confirm Password" %>
+			<%= f.password_field :password_confirmation %>
+			<br/>
+			<%= f.submit 'Update', class: 'btn btn-success btn-large' %>
+
+		<% end %>
+
+	</div>
+</div>
 
 <%= link_to 'Show', @user %> |
 <%= link_to 'Back', users_path %>
