--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,9 +1,18 @@
 <% if signed_in? %>
-	<%= render 'shared/collection' %>
+	<div class='row'>
+		<aside class='span4'>
+			<section>
+				<%= render 'shared/user' %>
+			</section>
+		</aside>
+		<div class='span8'>
+			<%= render 'shared/collection' %>
+		</div>
+	</div>
 <% else %>
 	<div class='center hero-unit'>
 		<h1>Book Worms</h1>
 		<p>Keep track of books you read. Join the club here.</p>
-		<%= button_to 'Sign Up', '/signup' , class: 'btn btn-primary btn-large' %>
+		<%= button_to 'Sign Up', '/signup' , class: 'btn btn-success btn-large' %>
 	</div>
 <% end %>
