--- a/app/views/shared/_collection.html.erb
+++ b/app/views/shared/_collection.html.erb
@@ -7,4 +7,6 @@
 		</li>
 	<% end %>
 </ul>
+<% else %>
+	<h5>Visit our <%= link_to 'Library', books_path %>, Browse & Add books to your Collection.</h5>
 <% end %>
