Modified help page

--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,9 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<h1>Need Help?</h1>
+<ol>
+	<li>Books Missing? You can add new book via 'Explore Books' menu.</li>
+	<li>Facing any problem? Book-worms still in active development.</li>
+</ol>
+<h3>Contact</h3>
+<p>You can drop me a
+	<a href='mailto:prasmailme@gmail.com'>mail</a>
+</p>
