--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,3 +1,3 @@
 <footer class='footer'>
-	BookSite by Prasanna Venkadesh
+	BookSite by <a href='http://impras.in' target='_blank'>Prasanna Venkadesh</a>
 </footer>
