Home page bg, added info to help

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -3,6 +3,11 @@
 /* colors */
 $lightGray: #999;
 
+/* homepage */
+.shelf {
+  background: url('book_shelf.png') no-repeat scroll 20% 101% transparent;
+}
+
 /* universal */
 .center {
 	text-align: center;
