--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,9 +1,19 @@
+<h1>What is Book Worm?</h1>
+<p>
+	A site where,
+	<ul>
+	<li>You can <strong>maintain a list (Collections)</strong> of books you read or want to read.</li>
+	<li>It is to <strong>keep track</strong> of what books you read and want to read, but <strong>not</strong> where you read books.</li>
+	</ul>
+</p>
+<hr/>
 <h1>Need Help?</h1>
 <ol>
 	<li>Books Missing? You can add new book via 'Explore Books' menu.</li>
 	<li>Facing any problem? Book-worms still in active development.</li>
 </ol>
-<h3>Contact</h3>
+<hr/>
+<h1>Contact</h1>
 <p>You can drop me a
 	<a href='mailto:prasmailme@gmail.com'>mail</a>
 </p>
