--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -10,9 +10,10 @@
 		</div>
 	</div>
 <% else %>
-	<div class='center hero-unit'>
+	<div class='center hero-unit shelf'>
 		<h1>Book Worms</h1>
-		<p>Keep track of books you read. Join the club here.</p>
+		<p><strong>Keep track of books you read. Join the club here.</strong></p><br/>
+		<p>Know <a href='./help'>More</a></p>
 		<%= button_to 'Sign Up', '/signup' , class: 'btn btn-success btn-large' %>
 	</div>
 <% end %>
